# nightshift

./: .gitignore  README.md  experiment.yaml  program.md  pyproject.toml  run.py  run_local.py
agent/: executor.py  local_executor.py  logger.py  loop.py  scientist.py
scripts/: finetune_config.yaml  setup_runpod.sh  train_remote.py
tests/: test_executor.py  test_logger.py  test_loop_dry.py  test_scientist.py
